# developer-survival

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CLAUDE.md  PROJECT_PLAN.md  README.md
backend/: pyproject.toml
backend/src/: main.py
backend/src/ai/: openai_deepseek.py
backend/src/api/: chat.py
backend/src/schemas/: chat.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
